css tweak, avoid increasing left-shift in comparison displays

--- a/theory/html/hspf-gpu/src/style.css
+++ b/theory/html/hspf-gpu/src/style.css
@@ -49,28 +49,20 @@ section {
 	/*border-radius: 20px ;*/
 }
 .maps_container {
-	width: 100% ;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-start;
+	display: grid;
+	gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 }
+
 .map_container {
 	display: inline-block ;
 	position: relative ;
-	margin-right: 5px ;
-	margin-bottom: 5px ;
-	flex: 1 1 48%;
-	max-width: 500px;
 	aspect-ratio: 5 / 4;
-	border: 2px solid rgba( 0, 0, 0, 0.2 ) ;
-	border-radius: 5px ;
+	border: 2px solid rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
 }
+
 .map_container > canvas {
-	/*border: 2px solid rgb( 125, 64, 64 ) ;*/
-	display: block ;
-	position: absolute ;
-	left: 0px ;
-	top: 0px ;
 	width: 100%;
 	height: 100%;
 }
@@ -79,8 +71,6 @@ section {
 	position: absolute ;
 	left: 0px ;
 	top: 0px ;
-	width: 100%;
-	height: 100%;
 	/*background-color: rgb( 256, 256, 256, 0.1 ) ;*/
 }
 
